--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       <a-sky color="gray">
     </a-scene>
     <div id="dialog" class="img-rounded intro-overlay">
-        <h4><strong>A-Frame MRI Viewer POC</strong></h4>
+        <h2>A-Frame MRI Viewer POC</h2>
         <p>This app is a very simple proof of concept showing sequential MRI scans of a friend's knee (thanks Tricky!) arranged in 3D space with low opacity to create an illusion of volume.</p>
-        <p>Use your mouse to <code>click and drag</code> to rotate the image.</p>
-        <p>Use the <code>scrollwheel</code> to zoom in / out.</p>
+        <p>Use your mouse to <code>click and drag</code> to rotate the image. Use the <code>scrollwheel</code> to zoom in / out.</p>
+        <p><a href="https://github.com/kfarr/aframe-mri-poc">See the code and more info on the git repo.</a></p>
     </div>
   </body>
