--- a/ar.html
+++ b/ar.html
@@ -3,10 +3,10 @@
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
   </head>
-  <body style='margin : 0px; overflow: hidden;'>
-    <a-scene embedded artoolkit='sourceType: webcam;'>
-      <a-marker-camera preset='hiro'></a-marker-camera>
-      <a-entity id="knee" position="0 0 0.5">
+  <body style="margin : 0px; overflow: hidden;">
+    <a-scene embedded artoolkit="sourceType: webcam;">
+      <a-marker-camera preset="hiro"></a-marker-camera>
+      <a-entity id="knee" scale="1.5 1.5 1.5" position="0 0 0.5" rotation="-90 0 0">
         <a-image src="assets/knee00.jpg" position="0 0 0" material="opacity: 0.15"></a-image>
         <a-image src="assets/knee01.jpg" position="0 0 0.02" material="opacity: 0.15"></a-image>
         <a-image src="assets/knee02.jpg" position="0 0 0.04" material="opacity: 0.15"></a-image>
