add marker link to ar page

--- a/ar.html
+++ b/ar.html
@@ -35,5 +35,11 @@
         <a-image src="assets/knee25.jpg" position="0 0 0.50" material="opacity: 0.15"></a-image>
       </a-entity>
     </a-scene>
+    <div style='position: fixed; bottom: 1em; width: 100%'>
+      <a href='https://jeromeetienne.github.io/webar-playground/augmenting-webpages/markers.html' target='_blank'>Load markers</a>
+       on your desktop -
+      <a href='https://github.com/kfarr/aframe-mri-poc' target='_blank'>Github Repo</a> -
+      Uses <a href='https://github.com/jeromeetienne/AR.js' target='_blank'>AR.js</a> and <a href='https://aframe.io' target='_blank'>A-Frame</a>
+    </div>
   </body>
 </html>
